se levanto correctamente la API noticias

--- a/src/app/components/portal-noticias/portal-noticias.component.html
+++ b/src/app/components/portal-noticias/portal-noticias.component.html
@@ -1,1 +1,1 @@
-<p>portal-noticias works!</p>
+<button type="button" id="DireccionIp" name="DireccionIp" (click)="mostrarNoticias()">mostrar Noticias</button>
