se consumio la api de noticias, se muestra por consolelog de dos formas, se crearon interfaces

--- a/src/app/components/portal-noticias/portal-noticias.component.html
+++ b/src/app/components/portal-noticias/portal-noticias.component.html
@@ -1,1 +1,10 @@
 <button type="button" id="DireccionIp" name="DireccionIp" (click)="mostrarNoticias()">mostrar Noticias</button>
+<div>
+    @for (noticia of noticias; track $index)
+    {
+        <h3>{{ noticia.seo.title }}</h3>
+        <p>{{ noticia.seo.description }}</p>
+    }
+
+  </div>
+  
